temp/unpackaged/objects/Freshbooks__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Authentication_Token__c</fullName>
        <label>Authentication Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enpoint_URL__c</fullName>
        <label>Enpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Freshbooks</label>
</CustomObject>